Fixed overflow issue on up scaled screens

--- a/css/upcoming.css
+++ b/css/upcoming.css
@@ -356,13 +356,14 @@ nav h2 #movieZine:hover {
 
 .expandedCard {
     width: 100%;
+    height: 85%;
     background-image: var(--ecard);
     margin: 0 60px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     transition: 0.5s;
-    overflow: hidden;
+    overflow: auto;
     box-shadow: 10px 10px 20px var(--ecardShadow);
 }
 
